2005-01-03  David Mosberger  <davidm@hpl.hp.com>

	* config/tc-ia64.c (md): Add member "loc_directive_seen".
	(dot_loc): New function.
	(md_pseudo_table): Add entry to map .loc to dot_loc().
	(emit_one_bundle): Only call dwarf2_gen_line_info() if we have
	seen a .loc directive or we're generating DWARF2 debug info for
	assembly source.

2004-12-29  Alan Modra  <amodra@bigpond.net.au>

	PR gas/619
	* read.c (s_comm_internal): Don't zero end of name until size
	expression has been parsed.

2004-12-25  Marek Michalkiewicz  <marekm@amelek.gda.pl>

	* config/tc-avr.c (mcu_types): Move attiny{13,2313} from avr4 to avr2.

2004-12-23  Tomer Levi  <Tomer.Levi@nsc.com>

	* config/tc-crx.c: Support 'bcop' relaxation (dealt as in 'cmp&branch'
	case).

2004-12-22  Ian Lance Taylor  <ian@airs.com>

	* configure.tgt: New.
	* configure.in: Move setting of cpu_type, fmt, etc., to
	configure.tgt.
	* Makefile.am (CONFIG_STATUS_DEPENDENCIES): Add
	$(srcdir)/configure.tgt.
	* configure, Makefile.in: Rebuild.

2004-12-22  Klaus Rudolph  <lts-rudolph@gmx.de>
    
	* config/tc-avr.c: Add support for the new R_AVR_LDI, R_AVR_6 and
	R_AVR_6_ADIW relocs for the LDI, ADIW/SBIW and LDD/STD
	instructions.
	(avr_offset_expression): New function to parse offsets for LDI
	instructions.
	(avr_operand): Use it.
	(md_apply_fix3): Generate the relocs.

2004-12-16  Andrew Stubbs  <andrew.stubbs@st.com>

	* config/tc-sh64.c (shmedia_md_apply_fix3): Add missing
	BFD_RELOC_SH_IMMS10BY8 relocation.

	* config/tc-sh64.c (shmedia_build_Mytes): Emit an error message rather
	than just ignoring bad code.

2004-12-16  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-v850.c (handle_lo16): New function.
	(v850_reloc_prefix): Use it to check lo().
	(md_assemble, md_apply_fix3): Handle BFD_RELOC_V850_LO16_SPLIT_OFFSET.

2004-12-14  P.J. Darcy  <darcypj@us.ibm.com>

	* configure.in: Add s390x-ibm-tpf support.
	* configure: Regenerate.

2004-12-15 Jan Beulich  <jbeulich@novell.com>
